--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,10 @@
 
 html, body {
     height: 100%;
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+    overflow-y: hidden; 
 }
 
 body {
@@ -114,16 +117,17 @@ main {
 }
 
 .avatar {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 50% !important;
+    width: 110px !important;
+    height: 110px !important;
+    object-fit: cover !important;
+    margin-bottom: 15px !important;
+    margin-top: 15px !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
+
 
 .profile-info {
     color: var(--text-color);
@@ -144,13 +148,11 @@ main {
     margin-top: 15px;
 }
 
-
 .profile-info ul {
     list-style-type: none !important;  
     padding-left: 0;
     margin-top: 5px;
 }
-
 
 .profile-info ul li {
     margin-bottom: 8px;
@@ -158,7 +160,6 @@ main {
     display: flex;
     align-items: center;  
 }
-
 
 .plat-logo,
 .hobby-logo {
@@ -214,7 +215,7 @@ footer {
     letter-spacing: 2px;
 }
 
-/* Style des champs de formulaire */
+/*Formulaire*/ 
 label {
     font-size: 1.1em;
     margin-bottom: 5px;
@@ -262,7 +263,6 @@ button[type="submit"]:hover {
     transform: scale(1.05);
 }
 
-/* Mobile responsiveness */
 @media (max-width: 600px) {
     #contact-form {
         width: 95%;
